added comments as I talked myself through it

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,7 +23,9 @@
         <button id="btn-clear">C</button>
     </form>
     <div id="recentResult"></div>
+    <!-- Most recent calculation appears here -->
     <div id="resultHistory"></div>
+    <!-- History calculations should appear here -->
 </body>
 
 </html>
