added step to number inputs to allow decimal

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,14 +12,14 @@
 <body>
     <h1>Server Side Calculator</h1>
     <form>
-        <input id="firstNumber" type="number" placeholder="First Number" required>
+        <input id="firstNumber" type="number" step="0.01" placeholder="First Number" required>
 
         <button id="btn-add">+</button>
         <button id="btn-subtract">-</button>
         <button id="btn-multiply">*</button>
         <button id="btn-divide">/</button>
 
-        <input id="secondNumber" type="number" placeholder="Second Number" required>
+        <input id="secondNumber" type="number" step="0.01" placeholder="Second Number" required>
 
         <button id="btn-equals">=</button>
         <button id="btn-clear">C</button>
